# blood-bank-system

./: README.md
backend/: README.md  pyproject.toml
backend/blood_bank_system/: main.py
backend/tests/: test_blood_bank_system.py
frontend/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/pages/: Landing.js  OrgHome.js  OrgReg.js  UserHome.js  UserReg.js
