[tool.poetry]
name = "blood-bank-system"
version = "0.1.0"
description = ""
authors = ["Srujan Deshpande <srujan.deshpande@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.3"}
SQLAlchemy = "^1.3.23"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
